# manaql-ingest

./: .dockerignore  .envexample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  fly.toml  manage.py  pyproject.toml
db/: fly.toml  schema.sql
manaql/: Dockerfile  asgi.py  config.py  fly.toml  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
manaql/common/: bulk_data.py  card_type.py  color.py  finish.py  format.py  game.py  keyword.py  scryfall.py  utils.py
manaql/database/: apps.py
manaql/database/migrations/: 0001_initial.py  0002_alter_card_main_type.py  0002_rename_card_id_printing_card.py  0003_alter_card_card_id.py  0003_runlog.py  0004_alter_printing_id.py  0004_alter_runlog_message.py  0005_printing_is_serialized.py  0005_rename_card_id_card_id.py  0006_failedcard.py  0006_scryfallcard_promo_types.py  0007_card_cmc_card_color_identity_card_colors_and_more.py  0007_scryfallcard_delete_failedcard.py  0008_alter_scryfallcard_collector_number_and_more.py  0008_create_pgvector_extension.py  0009_add_card_embedding.py  0009_alter_card_name.py  0010_alter_printing_collector_number.py
manaql/database/models/: __init__.py  card.py  failed_card.py  printing.py  run_log.py  scryfall_card.py
manaql/ingest/: asgi.py  settings.py  wsgi.py
manaql/ingest/management/commands/: all.py  download.py  generate_embeddings.py  ingest.py  process.py
manaql/models/: card.py  printing.py
manaql/services/: __init__.py  card_processor.py  db_retry.py  embedding_service.py  export_strategy.py  scryfall.py  scryfall_exporter.py
manaql/services/scryfall/: client.py
manaql/tests/: test_card_processor.py  test_card_type.py  test_printing.py  test_scryfall_exporter.py
scripts/: set-env.sh
