[tool.poetry]
name = "manaql"
version = "0.1.0"
description = ""
authors = ["jcserv <jarrod.servilla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "^3.8.1"
Django = "^5.1.3"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.10"
sqlparse = "^0.5.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
